Text align fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -192,6 +192,7 @@ select {
 .todo-item p {
   margin-left: 0px;
   text-align: center;
+  width: 100%;
 }
 
 .done {
